--- a/css/home.css
+++ b/css/home.css
@@ -693,194 +693,6 @@
   color: rgba(34, 34, 39, 1);
 }
 
-/* Reviews section */
-
-.reviews {
-  position: relative; 
-  background-color: #15151857;
-  padding-left: 110px;
-  padding-right: 110px;
-  padding-top: 50px;
-  color: #FFFFFF;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.reviews-content {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  position: relative;
-  max-width: 1216px;
-}
-
-.reviews-info-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.reviews-info-item { 
-  display: flex;
-  flex-direction: column;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  border-bottom-color: #7AB8FF;
-  border-bottom-width: 2px;
-  border-bottom-style: solid;
-}
-
-.reviews-info-date {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: right;
-  margin: 0;
-}
-
-.reviews-info-review-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.reviews-info-review-block p {
-  font-family: Montserrat;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  color: rgba(255, 255, 255, 1);
-  max-width: 815px;
-  margin: 0;
-}
-
-.review-info-star-block {
-  display: flex;
-  flex-direction: column;
-  margin-right: 64px;
-  width: 151px;
-  text-align: center;
-}
-
-.review-info-star-block p {
-  font-family: Unbounded;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22.32px;
-  color: rgba(255, 255, 255, 1);
-  margin: 0;
-  margin-bottom: 8px;
-}
-
-.review-info-star-block img {
-  height: 22.5px;
-}
-
-.reviews-leave-review {
-  margin-top: 64px;
-  display: flex;
-  flex-direction: column;
-}
-
-.reviews-leave-review .h3 {
-  margin-bottom: 40px;
-}
-
-.reviews-leave-review-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.reviews-leave-review-inputs-block {
-  max-width: 903px;
-  width: 100%;
-}
-
-.reviews-leave-review-name-input-block {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.feedback-form {
-  max-width: 1000px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  margin-bottom: 40px;
-}
-
-.feedback-form-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.feedback-form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.feedback-form-group label span {
-  font-family: 'Montserrat';
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24.38px;
-  text-align: center;
-}
-
-.feedback-form-group input,
-.feedback-form-group textarea {
-  font-family: 'Montserrat';
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 30px;
-  color: rgba(255, 255, 255, 1);
-  background: transparent;
-  border: 2px solid rgba(255, 255, 255, 1);
-  border-radius: 12px;
-  padding: 18px;
-}
-
-.feedback-form-group input[type="text"],
-.feedback-form-group input[type="email"] {
-  width: 440px;
-  height: 49px;
-}
-
-.feedback-form-group textarea {
-  width: 903px;
-  height: 151px;
-  background: rgba(255, 255, 255, 0.04);
-}
-
-.feedback-form-group textarea::placeholder, input::placeholder {
-  color: rgba(255, 255, 255, 1);
-}
-
-.reviews-select-stars-mobile {
-  display: none;
-}
-
-.reviews-select-stars {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  height: min-content;
-  cursor: pointer;
-}
-
-.reviews-select-stars img {
-  height: 33px;
-  width: 33px;
-}
-
 /* Editor group section */
 
 .editor-group {
@@ -1192,30 +1004,6 @@
     height: 40px;
   }
 
-  /* Reviews section */
-
-  .reviews-info-review-block p {
-    font-size: 17px;
-    line-height: 23px;
-    max-width: 730px;
-  }
-
-  .feedback-form {
-    max-width: 800px;
-    gap: 32px;
-    margin: 0;
-    margin-bottom: 40px;
-  }
-  
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: 380px;
-  }
-
-  .feedback-form-group textarea {
-    width: 803px;
-  }
-
   /* Editor group section */
 
   .editor-info p {
@@ -1514,47 +1302,6 @@
     font-size: 26px;
     line-height: 42px;
     color: rgba(34, 34, 39, 1);
-  }
-
-  /* Reviews section */
-
-  .reviews {
-    padding-left: 92px;
-    padding-right: 92px;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19px;
-    max-width: 520px;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19px;
-  }
-
-  .feedback-form {
-    max-width: 500px;
-    gap: 24px;
-    margin: 0;
-    margin-bottom: 40px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 180px;
-  }
-  
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: 300px;
-  }
-
-  .feedback-form-group textarea {
-    width: 500px;
   }
 
   /* Editor group section */
@@ -2083,111 +1830,6 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 22.5px;
-  }
-
-  /* Reviews section */
-
-  .reviews {
-    padding: 0 32px;
-  }
-
-  .reviews-content .h3 {
-    margin: 16px 0 0;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .reviews-info-review-block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .review-info-star-block {
-    margin-right: 0;
-    margin-bottom: 24px;
-    width: auto;
-    text-align: left;
-  }
-
-  .review-info-star-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-
-  .reviews-leave-review {
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .reviews-leave-review-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .reviews-select-stars {
-    display: none;
-  }
-
-  .reviews-select-stars-mobile {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: min-content;
-    margin-top: 32px;
-    margin-bottom: 16px;
-    cursor: pointer;
-  }
-
-  .reviews-select-stars-mobile img {
-    height: 33px;
-    width: 33px;
-  }
-
-  .feedback-form {
-    gap: 24px;
-    margin-bottom: 48px;
-    margin-top: 16px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 24px;
-  }
-
-  .feedback-form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-
-  .feedback-form-group label span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: auto;
-    height: 56px;
-  }
-
-  .feedback-form-group textarea {
-    width: auto;
-    height: 190px;
   }
 
   /* Editor group section */
@@ -2856,109 +2498,8 @@
   /* Reviews section */
 
   .reviews {
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top: 0;
+    padding: 0 16px 0 !important;
     text-align: start;
-  }
-
-  .reviews-content .h3 {
-    margin-bottom: 8px;
-  }
-
-  .reviews-info-date {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .reviews-info-review-block {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-
-  .reviews-info-review-block p {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .review-info-star-block {
-    margin-right: 0;
-    margin-bottom: 24px;
-    width: auto;
-    text-align: left;
-  }
-
-  .review-info-star-block p {
-    font-size: 16px;
-    line-height: 19.84px;
-  }
-
-  .reviews-leave-review {
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .reviews-leave-review-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .reviews-select-stars {
-    display: none;
-  }
-
-  .reviews-select-stars-mobile {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    height: min-content;
-    margin-top: 32px;
-    margin-bottom: 16px;
-    cursor: pointer;
-  }
-
-  .reviews-select-stars-mobile img {
-    height: 33px;
-    width: 33px;
-  }
-
-  .feedback-form {
-    gap: 16px;
-    margin-bottom: 64px;
-  }
-
-  .feedback-form-row {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 16px;
-  }
-
-  .feedback-form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-  
-
-  .feedback-form-group label span {
-    font-size: 16px;
-    line-height: 19.5px;
-  }
-
-  .feedback-form-group input[type="text"],
-  .feedback-form-group input[type="email"] {
-    width: auto;
-    height: 56px;
-  }
-
-  .feedback-form-group textarea {
-    width: auto;
-    height: 190px;
   }
 
   /* Editor group section */
