--- a/css/vinnytsia.css
+++ b/css/vinnytsia.css
@@ -1854,8 +1854,9 @@ p { margin: 0; }
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 16px;
+    gap: 8px;
     margin-top: 64px;
+    overflow: hidden;
   }
 
   .urgent-buyback-white-block {
