fix: update mobile pop up

--- a/components/header.html
+++ b/components/header.html
@@ -99,7 +99,7 @@
   </div>
 
   <div class="mobile-menu-content">
-    <span>Автовикуп після ДТП</span>
+    <a href="home.html"><span>Автовикуп після ДТП</span></a>
     <span class="menu-item" data-target="cities">Міста</span>
     <a href="blog.html"><span>Блог</span></a>
     <a href="about-us.html"><span>Про нас</span></a>
