feat: add scroll to top button fixed on bottom right corner

--- a/components/footer.html
+++ b/components/footer.html
@@ -112,5 +112,10 @@
         </div>
       </div>
     </div>
+
+    <div class="sticky-to-top-button">
+      <p>На початок</p>
+      <img src="../img/footer-to-top-icon.svg" alt="To Top icon" class="to-top-icon">
+    </div>
   </div>
 </footer>
